Changed return value of users/profile handler func
